// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render text to svg 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" version=\\"1.1\\" width=\\"100\\" height=\\"50\\">
    <path d=\\"M0,0L100,0L100,50L0,50L0,0Z\\" fill=\\"red\\" stroke=\\"none\\" stroke-width=\\"0\\"/>
    <text text-anchor=\\"start\\" x=\\"0\\" y=\\"2\\" fill=\\"black\\">
        Hello World!
    </text>
</svg>"
`;

exports[`render to svg 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" version=\\"1.1\\" width=\\"100\\" height=\\"50\\">
    <path d=\\"M0,0L100,0L100,50L0,50L0,0Z\\" fill=\\"red\\" stroke=\\"none\\" stroke-width=\\"0\\"/>
</svg>"
`;
